# brian2models-mcp

./: .gitignore  CLAUDE.md  KICKSTART_PROMPT.md  LICENSE  README.md  TOOL_REGISTRY.md  pyproject.toml
scripts/: seed_library.py
skills/: brian2_simulation.md  simulation_results.md
src/brian2models_mcp/: __init__.py  cli.py  library.py  schemas.py  seeder.py  server.py
tests/integration/: test_roundtrip.py
tests/unit/: test_library.py
