[project]
name = "brian2models-mcp"
version = "0.1.0"
description = "MCP server and skills for Brian2 neural simulation model library"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["brian2", "neuroscience", "simulation", "MCP", "model-context-protocol", "computational-neuroscience"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "mcp[cli]>=1.0",
    "pydantic>=2.0",
    "requests>=2.28",
    "brian2>=2.5",
]

[project.scripts]
brian2models-mcp = "brian2models_mcp.server:main"
brian2models = "brian2models_mcp.cli:main"

[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: live tests requiring network access (deselect by default)",
]
